--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>depot git-one</title>
+    
 </head>
 <body>
     <h1>This project already has some files</h1>
+
+    <script src="feature-a.js"></script>
 </body>
-n
